--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -12,6 +12,8 @@
 
     <artifactId>cli</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <properties>
+    </properties>
 
 
     <dependencies>
@@ -35,6 +37,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
