--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,18 @@
     </modules>
     <properties>
         <java.version>21</java.version>
+        <picocli.version>4.7.7</picocli.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli-spring-boot-starter</artifactId>
+                <version>${picocli.version}</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
 
 </project>
