--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -42,6 +42,10 @@
             <groupId>info.picocli</groupId>
             <artifactId>picocli-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectix</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
