--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <properties>
         <java.version>21</java.version>
         <picocli.version>4.7.7</picocli.version>
+        <core.version>0.0.1-SNAPSHOT</core.version>
     </properties>
 
     <dependencyManagement>
@@ -45,6 +46,13 @@
                 <artifactId>picocli-spring-boot-starter</artifactId>
                 <version>${picocli.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectix</groupId>
+                <artifactId>core</artifactId>
+                <version>${core.version}</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
