--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.projectix</groupId>
-        <artifactId>projectix-parent</artifactId>
+        <groupId>org.projectcontrol</groupId>
+        <artifactId>projectcontrol-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -43,7 +43,7 @@
             <artifactId>picocli-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.projectix</groupId>
+            <groupId>org.projectcontrol</groupId>
             <artifactId>core</artifactId>
         </dependency>
     </dependencies>
