--- a/server/pom.xml
+++ b/server/pom.xml
@@ -49,6 +49,19 @@
             <groupId>org.projectcontrol</groupId>
             <artifactId>core</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.9.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model-builder</artifactId>
+            <version>3.9.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
