--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.1.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "bootstrap": "^5.3.7",
+    "luxon": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -39,6 +40,7 @@
     "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.7.1",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
