--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,6 +16,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
     </properties>
 
 
@@ -62,6 +63,12 @@
             <version>3.9.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -74,6 +81,11 @@
                         <path>
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-configuration-processor</artifactId>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
