--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "ag-grid-angular": "^34.1.1",
     "bootstrap": "^5.3.7",
     "luxon": "^3.7.1",
     "rxjs": "~7.8.0",
