--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "@angular/build": "^20.1.6",
     "@angular/cli": "^20.1.6",
     "@angular/compiler-cli": "^20.1.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.7.1",
     "jasmine-core": "~5.8.0",
