tentative d'ajout du proxy (ne fonctionne pas)

--- a/client/angular.json
+++ b/client/angular.json
@@ -69,7 +69,8 @@
               "buildTarget": "projectcontrolclient:build:production"
             },
             "development": {
-              "buildTarget": "projectcontrolclient:build:development"
+              "buildTarget": "projectcontrolclient:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
