tentative d'utiliser le proxy pour angular

--- a/client/angular.json
+++ b/client/angular.json
@@ -64,6 +64,10 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "buildTarget": "projectcontrolclient:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "projectcontrolclient:build:production"
