--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.projectcontrol</groupId>
             <artifactId>core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
