--- a/core/pom.xml
+++ b/core/pom.xml
@@ -70,6 +70,11 @@
             <version>2.20.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
