--- a/core/pom.xml
+++ b/core/pom.xml
@@ -52,11 +52,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>io.reactivex.rxjava3</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>3.1.11</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.reactivex.rxjava3</groupId>-->
+<!--            <artifactId>rxjava</artifactId>-->
+<!--            <version>3.1.11</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -73,6 +73,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
         </dependency>
 
     </dependencies>
