--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,11 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@primeuix/themes": "^1.2.3",
     "ag-grid-angular": "^34.1.1",
     "bootstrap": "^5.3.7",
     "luxon": "^3.7.1",
+    "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
