--- a/client/pom.xml
+++ b/client/pom.xml
@@ -30,18 +30,28 @@
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
-                        <!-- optional: default phase is "generate-resources" -->
                         <phase>generate-resources</phase>
+
+                      <configuration>
+                        <arguments>run build</arguments>
+                      </configuration>
                     </execution>
+                  <execution>
+                    <id>build projet</id>
+                    <goals>
+                      <goal>npm</goal>
+                    </goals>
+
+                    <phase>generate-resources</phase>
+
+                    <configuration>
+                      <arguments>run build</arguments>
+                    </configuration>
+                  </execution>
                 </executions>
                 <configuration>
                     <nodeVersion>v22.18.0</nodeVersion>
 
-                    <!-- optional: with node version greater than 4.0.0 will use npm provided by node distribution -->
-<!--                    <npmVersion>2.15.9</npmVersion>-->
-
-                    <!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-<!--                    <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot>-->
                 </configuration>
             </plugin>
 
